geospatial-analysis/labeldata_studio/k8s/Ingress-nginx.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: data-services
    annotations:
      cert-manager.io/cluster-issuer: letsencrypt-sirius
      #nginx.ingress.kubernetes.io/backend-protocol: "TCP"
      #nginx.ingress.kubernetes.io/ssl-redirect: "false"
      #nginx.ingress.kubernetes.io/aws-load-balancer-ssl-cert: arn:aws:acm:eu-west-1:132223571318:certificate/3a76ad09-2a81-4bf7-a2bb-32d03ec72e25
      #alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:eu-west-1:132223571318:certificate/3a76ad09-2a81-4bf7-a2bb-32d03ec72e25
      #service.beta.kubernetes.io/aws-load-balancer-backend-protocol: tcp
      # service.beta.kubernetes.io/aws-load-balancer-type: nlb
      kubernetes.io/ingress.class: nginx
      nginx.org/client-max-body-size: "0"
      nginx.ingress.kubernetes.io/proxy-body-size: "0"
    #   ingress.kubernetes.io/rewrite-target: /
    #   
    #   nginx.ingress.kubernetes.io/use-regex: "true"
      #nginx.ingress.kubernetes.io/secure-backends: "true"
      #nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
      
# spec:
#     type: LoadBalancer
#     ports:
#     - port: 4200
#     selector:
#         app: video-manager-client

spec:
  tls:
    - hosts:
        - riuslabs.siriusai.net
      secretName: riuslabs.siriusai.net-lnhf5
  #ingressClassName: nginx
  rules:
  - host: "riuslabs.siriusai.net"
    http:
      paths:
      - path: "/"
        pathType: ImplementationSpecific
        backend:
          service:+
            name: data-services-riuslab-ui-app
            port: 
              number: 7737
